Add description for About you
Adding in descriptive text for the top of the page

--- a/frameworks/g-cloud-8/manifests/declaration.yml
+++ b/frameworks/g-cloud-8/manifests/declaration.yml
@@ -17,7 +17,9 @@
 -
   name: About you
   editable: True
-  questions:
+  description: >
+    The Crown Commercial Service will use the information you provide under 'About you' to process your application and manage your participation in the G-Cloud 8 framework.
+  questions:    
     - SQ1-2a
     - SQ1-2b
     - SQ1-1a
