Add weighting multiquestions
Respectively, they contain all of the weighting criteria questions
for the different lots.

--- a/frameworks/digital-outcomes-and-specialists/manifests/edit_brief.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/edit_brief.yml
@@ -73,17 +73,8 @@
   questions:
     - successCriteria
     - evaluationType
--
-  name: Criteria weighting
-  editable: True
-  step: 2
-  questions:
-    - culturalWeightingOutcomesSpecialists
-    - culturalWeightingParticipants
-    - priceWeightingOutcomesSpecialists
-    - priceWeightingParticipants
-    - technicalWeightingOurcomesSpecialists
-    - technicalWeightingParticipants
+    - weightingOutcomesSpecialists
+    - weightingParticipants
 -
   name: Describe question and answer session
   editable: True
