Add `step` to manifest schema and README

--- a/schemas/manifests.json
+++ b/schemas/manifests.json
@@ -25,6 +25,9 @@
       },
       "description": {
         "type": "string"
+      },
+      "step": {
+        "type": "integer"
       }
     },
     "required": ["name", "questions"],
