Add question and answer session details question
Adds the question file and a manifest section. The section name
is temporary since the manifest will have to be changed when the
overview page is done.

--- a/frameworks/digital-outcomes-and-specialists/manifests/edit_brief.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/edit_brief.yml
@@ -101,3 +101,8 @@
     - priceWeightingParticipants
     - technicalWeightingOurcomesSpecialists
     - technicalWeightingParticipants
+
+- name: Supplier questions
+  editable: True
+  questions:
+    - questionAndAnswerSessionDetails
