--- a/frameworks/digital-outcomes-and-specialists/questions/brief-responses/respondToEmailAddress.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/brief-responses/respondToEmailAddress.yml
@@ -2,7 +2,10 @@ name: Email address
 question: Email address the buyer should use to contact you
 hint: All correspondence regarding your application for this opportunity will be sent to this address.
 
-type: email
+type: text
+limits:
+  format: email
+
 depends:
   - "on": "lot"
     being:
