--- a/frameworks/digital-outcomes-and-specialists/questions/brief-responses/dayRate.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/brief-responses/dayRate.yml
@@ -1,19 +1,23 @@
 name: Day rate
 question: How much do you charge per day?
 hint: 'Please enter a number, not a range'
-type: text
-unit: "£"
-unit_in_full: "pounds"
-unit_position: "before"
+
+type: pricing
+fields:
+  price: dayRate
+
 depends:
   - "on": "lot"
     being:
       - digital-specialists
 validations:
-  -
-    name: answer_required
+  - name: answer_required
     message: 'You need to answer this question.'
-  -
-    name: under_character_limit
-    message: "Your day rate must be no more than 100 figures."
+  - name: not_money_format
+    field: dayRate
+    message: "Day rate must be a number, without units, eg 99.95"
+  - name: max_less_than_min
+    field: dayRate
+    message: "This can't be more than the maximum day rate you've already provided"
+
 empty_message: Set rate
