--- a/frameworks/digital-outcomes-and-specialists/questions/brief-responses/respondToEmailAddress.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/brief-responses/respondToEmailAddress.yml
@@ -12,3 +12,9 @@ depends:
       - digital-outcomes
       - digital-specialists
       - user-research-participants
+
+validations:
+  - name: answer_required
+    message: 'You need to answer this question.'
+  - name: invalid_format
+    message: "You must enter a valid email address."
