Split locations into three questions
The location question text is now different for all lots, so need to split the question out into three questions with the same `id`.

--- a/frameworks/digital-outcomes-and-specialists/manifests/edit_brief.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/edit_brief.yml
@@ -15,7 +15,8 @@
   editable: True
   step: 1
   questions:
-    - locationOutcomesSpecialists
+    - locationOutcomes
+    - locationSpecialists
     - locationParticipants
 -
   name: Description of work
