Update content for Outcomes description of work
This now matches the prototype words and question ordering.

--- a/frameworks/digital-outcomes-and-specialists/manifests/edit_brief.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/edit_brief.yml
@@ -26,15 +26,22 @@
     This will help suppliers decide whether to apply.
   questions:
     - organisation
+    - summary
     - backgroundInformation
     - outcome
-    - userNeeds
     - endUsers
+    - userNeeds
+    - earlyMarketEngagement
+    - workAlreadyDone
     - phase
+    - existingTeam
+    - workplace
     - workingArrangements
+    - securityClearance
     - startDate
     - contractLength
     - additionalTerms
+    - budgetRange
     - expectedOutcomes
     - currentTechnologies
     - importantDates
