--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/organisation.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/organisation.yml
@@ -1,6 +1,7 @@
-name: Your organisation
+name: Organisation the work is for
 question: Organisation the work is for
-hint: 'eg Department of Work and Pensions or Goldsmiths, University of London'
+question_advice: 'eg National Audit Office or Lewisham Council'
+hint: 100 characters maximum
 type: text
 depends:
   - "on": "lot"
