--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/summary.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/summary.yml
@@ -1,6 +1,8 @@
-name: Problem to be solved
-question: Problem to be solved
-question_advice: eg patients can’t access their medical records
+name: Summary of the work
+question: Summary
+question_advice: >
+  This will appear on the supplier opportunities page on the Digital Marketplace.
+  It will help suppliers decide whether or not to view your requirements.
 type: textbox_large
 max_length_in_words: 100
 depends:
@@ -14,4 +16,4 @@ validations:
   -
     name: under_100_words
     message: 'Your answer must be no more than 100 words.'
-empty_message: Describe problem
+empty_message: Provide a brief summary of the work
