--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/workingArrangements.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/workingArrangements.yml
@@ -1,12 +1,16 @@
 name: Working arrangements
-question: Describe working arrangement preference
-hint: |
-  Optional
+question: Working arrangements
+question_advice: |
+  Describe how you want to work with the individual or team.
   
-  eg remote working preference or specific hours or days required
-optional: true
+  Explain why you want to work with them in this way.
+  
+  Include any limits on expenses.
+  
+  eg onsite 3 days a week for face-to-face team meetings.
+
 type: textbox_large
-max_length_in_words: 50
+max_length_in_words: 100
 depends:
   - "on": "lot"
     being:
@@ -17,6 +21,6 @@ validations:
     name: answer_required
     message: 'You need to answer this question.'
   -
-    name: under_50_words
-    message: 'Your description must be no more than 50 words.'
-empty_message: Add description
+    name: under_100_words
+    message: 'Your answer must be no more than 100 words.'
+empty_message: Describe working arrangements
