Update content for Specialists description of work
This now matches the prototype words.
 The question ordering is necessarily slightly different from the prototype because some questions common to both outcomes and specialists lots are in different orders in the prototype.  It is currently not possible to model this in our manifest file.

--- a/frameworks/digital-outcomes-and-specialists/manifests/edit_brief.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/edit_brief.yml
@@ -29,12 +29,14 @@
     - summary
     - backgroundInformation
     - outcome
+    - specialistWork
     - endUsers
     - userNeeds
     - earlyMarketEngagement
     - workAlreadyDone
     - phase
     - existingTeam
+    - existingTeamSpecialists
     - workplace
     - workingArrangements
     - securityClearance
@@ -42,9 +44,7 @@
     - contractLength
     - additionalTerms
     - budgetRange
-    - expectedOutcomes
-    - currentTechnologies
-    - importantDates
+    - maxDayRate
 -
   name: Shortlist criteria
   editable: True
