--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/existingTeamSpecialists.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/existingTeamSpecialists.yml
@@ -1,12 +1,14 @@
-name: Important dates
-question: Any important dates
-hint: 'eg a policy date by which the minimum viable product must be ready'
+name: Who the specialist will work with
+question: Who the specialist will work with
+question_advice: |
+  Describe the team the specialist will be working with on this project.
+
+  eg you’ll be working with a user researcher and a designer
 type: textbox_large
 max_length_in_words: 100
 depends:
   - "on": "lot"
     being:
-      - digital-outcomes
       - digital-specialists
 validations:
   -
@@ -15,4 +17,4 @@ validations:
   -
     name: under_100_words
     message: 'Your answer must be no more than 100 words.'
-empty_message: Add description
+empty_message: Describe existing team
