Update for new question keys

--- a/frameworks/digital-outcomes-and-specialists/manifests/edit_brief.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/edit_brief.yml
@@ -35,16 +35,16 @@
     - earlyMarketEngagement
     - workAlreadyDone
     - phase
-    - existingTeam
+    - existingTeamOutcomes
     - existingTeamSpecialists
-    - workplace
+    - workplaceAddress
     - workingArrangements
     - securityClearance
     - startDate
     - contractLength
     - additionalTerms
-    - budgetRange
-    - maxDayRate
+    - budgetRangeOutcomes
+    - budgetRangeSpecialists
 -
   name: Shortlist criteria
   editable: True
