Add summary question for specialists and participants

--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/summary.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/summary.yml
@@ -9,6 +9,8 @@ depends:
   - "on": "lot"
     being:
       - digital-outcomes
+      - digital-specialists
+      - user-research-participants
 validations:
   -
     name: answer_required
