--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/budgetRangeOutcomesParticipants.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/budgetRangeOutcomesParticipants.yml
@@ -18,6 +18,7 @@ depends:
   - "on": "lot"
     being:
       - digital-outcomes
+      - user-research-participants
 validations:
   -
     name: under_100_words
