Update content for participants lot

--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/summary.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/summary.yml
@@ -9,13 +9,11 @@ depends:
   - "on": "lot"
     being:
       - digital-outcomes
-      - digital-specialists
-      - user-research-participants
 validations:
   -
     name: answer_required
     message: 'You need to answer this question.'
   -
     name: under_50_words
-    message: 'Your answer must be no more than 50 words.'
-empty_message: Provide a brief summary of the work
+    message: 'Your answer must be no brief more than 50 words.'
+empty_message: Provide a summary of the work
