--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/niceToHaveRequirements.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/niceToHaveRequirements.yml
@@ -7,6 +7,7 @@ hint: |
 
   eg does your organisation have experience working with low technical experience users?
 list_item_name: 'nice-to-have requirement'
+number_of_items: 20
 optional: true
 type: list
 depends:
@@ -24,7 +25,7 @@ validations:
     message: 'Each requirement must be no more than 30 words.'
   -
     name: under_10_items
-    message: 'You must have 10 or fewer requirements.'
+    message: 'You must have 20 or fewer requirements.'
   -
     name: under_character_limit
     message: 'Each requirement must be no more than 300 characters.'
