--- a/frameworks/g-cloud-7/questions/services/vendorCertifications.yml
+++ b/frameworks/g-cloud-7/questions/services/vendorCertifications.yml
@@ -18,7 +18,7 @@ validations:
       name: under_10_words
       message: 'Each certification must be no more than 10 words.'
     -
-      name: under_10_items
+      name: max_items_limit
       message: 'You must have 10 or fewer certifications.'
     -
       name: under_character_limit
