--- a/frameworks/g-cloud-8/questions/services/identityStandards.yml
+++ b/frameworks/g-cloud-8/questions/services/identityStandards.yml
@@ -12,7 +12,7 @@ validations:
     name: under_10_words
     message: 'Each identity standard must be no more than 10 words.'
   -
-    name: under_10_items
+    name: max_items_limit
     message: 'You must have 10 or fewer identity standards.'
   -
     name: under_character_limit
