--- a/frameworks/g-cloud-8/questions/services/serviceFeatures.yml
+++ b/frameworks/g-cloud-8/questions/services/serviceFeatures.yml
@@ -21,7 +21,7 @@ validations:
     name: under_10_words
     message: 'Each feature must be no more than 10 words.'
   -
-    name: under_10_items
+    name: max_items_limit
     message: 'You must have 10 or fewer features.'
   -
     name: under_character_limit
