Use markdown instead of HTML markup for abbreviations
Abbreviations are supported in a markup extension which we
are currently enabling.

Also change `>`s to `|` for longer blocks in our messages.
Means we can cut out a bunch of superfluous linebreaks.

--- a/frameworks/g-cloud-8/messages/dates.yml
+++ b/frameworks/g-cloud-8/messages/dates.yml
@@ -1,5 +1,14 @@
-clarifications_close_date: '5pm <abbr title="British Summer Time">BST</abbr>, 31 February 3021 (CHANGE THIS)'
-clarifications_publish_date: '5pm <abbr title="British Summer Time">BST</abbr>, 31 February 3021 (CHANGE THIS)'
-framework_close_date: '3pm <abbr title="British Summer Time">BST</abbr>, 31 February 3021 (CHANGE THIS)'
+clarifications_close_date: |
+  5pm BST, 31 February 3021 (CHANGE THIS)
+
+  *[BST]: British Summer Time
+clarifications_publish_date: |
+  5pm BST, 31 February 3021 (CHANGE THIS)
+
+  *[BST]: British Summer Time
+framework_close_date: |
+  3pm BST, 31 February 3021 (CHANGE THIS)
+
+  *[BST]: British Summer Time
 intention_to_award_date: '31 February 3021 (CHANGE THIS)'
 framework_live_date: '31 February 3021 (CHANGE THIS)'
