--- a/frameworks/digital-outcomes-and-specialists/messages/dates.yml
+++ b/frameworks/digital-outcomes-and-specialists/messages/dates.yml
@@ -1,5 +1,14 @@
-clarifications_close_date: '5pm <abbr title="Greenwich Mean Time">GMT</abbr>, 6 January 2016'
-clarifications_publish_date: '5pm <abbr title="Greenwich Mean Time">GMT</abbr>, 13 January 2016'
-framework_close_date: '3pm <abbr title="Greenwich Mean Time">GMT</abbr>, 19 January 2016'
+clarifications_close_date: |
+  5pm GMT, 6 January 2016
+
+  *[GMT]: Greenwich Mean Time
+clarifications_publish_date: |
+  5pm GMT, 13 January 2016
+
+  *[GMT]: Greenwich Mean Time
+framework_close_date: |
+  3pm GMT, 19 January 2016
+
+  *[GMT]: Greenwich Mean Time
 intention_to_award_date: '18 February 2016'
 framework_live_date: ""
