--- a/frameworks/g-cloud-8/messages/homepage-sidebar.yml
+++ b/frameworks/g-cloud-8/messages/homepage-sidebar.yml
@@ -8,10 +8,12 @@ pending:
 open:
   template_name: 'framework-notice'
   heading: 'Become a G-Cloud 8 supplier'
-  subheading: 'Deadline: 3pm <abbr title="British Summer Time">BST</abbr>, 31 February 3021 (CHANGE THIS)'
-  message: >
-    **G-Cloud 8 is open for applications.**
+  subheading: |
+    3pm BST, 31 February 3021 (CHANGE THIS)
 
+    *[BST]: British Summer Time
+  message: |
+    **G-Cloud 8 is open for applications.**
 
     You can apply to provide:
 
@@ -21,6 +23,5 @@ open:
       - Specialist Cloud Services
 
     [Create an account](/suppliers/create) or [log in](/suppliers/login) to apply.
-
 
     [Find out how to apply](https://www.gov.uk/guidance/g-cloud-8-suppliers-guide)
