Update evaluation criteria content

--- a/frameworks/digital-outcomes-and-specialists/manifests/edit_brief.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/edit_brief.yml
@@ -88,11 +88,23 @@
     - technical competence, eg how well the supplier's skills or proposed solution meet your needs
     - ‘cultural fit’, eg how the supplier will work in your organisation
     - the price of the proposed solution
+    
+    If you want to add ‘points’ to the individual criteria in technical competence and cultural fit, 
+    you must tell suppliers the points you’ll give to each one when you publish your criteria, 
+    eg experience designing services for users with low digital literacy - 15 points
   questions:
-    - successCriteria
-    - evaluationType
     - weightingOutcomesSpecialists
     - weightingParticipants
+    - essentialRequirements
+    - niceToHaveRequirements
+    - successCriteriaOutcomes
+    - successCriteriaParticipants
+    - culturalFitCriteria
+    - priceCriteria
+    - evaluationTypeOutcomes
+    - evaluationTypeSpecialists
+    - evaluationTypeParticipants
+    
 -
   name: Describe question and answer session
   editable: True
