--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/culturalWeightingOutcomesSpecialists.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/culturalWeightingOutcomesSpecialists.yml
@@ -1,6 +1,9 @@
 id: culturalWeighting
 question: 'Cultural fit'
-hint: 'Permitted range 5% to 20%'
+question_advice: > 
+  Cultural fit is how well you and the individual or team will work together. If the supplier’s 
+  values and behaviour are similar to your organisation’s, they should be a good cultural fit.
+hint: 'This can be between 5% and 20%'
 
 depends:
   - "on": lot
