--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/priceWeightingParticipants.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/priceWeightingParticipants.yml
@@ -1,6 +1,7 @@
 id: priceWeighting
 question: 'Price'
-hint: 'Permitted range 20% to 80%'
+question_advice: Price is evaluated on how close each supplier’s quote is to the cheapest quote.
+hint: 'This can be between 20% and 80%'
 
 depends:
   - "on": lot
