--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/priceWeightingSpecialists.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/priceWeightingSpecialists.yml
@@ -1,23 +1,22 @@
-id: technicalWeighting
-question: 'Technical competence'
-hint: 'Permitted range 10% to 75%'
+id: priceWeighting
+question: 'Price'
+hint: 'This can be between 20% and 85%'
 
 depends:
   - "on": lot
     being:
-      - digital-outcomes
       - digital-specialists
 
 type: percentage
 limits:
-  min_value: 10
-  max_value: 75
+  min_value: 20
+  max_value: 85
   integer_only: true
 
 validations:
   - name: answer_required
     message: 'You need to answer this question.'
   - name: not_a_number
-    message: 'Weighting must be a number between 10 and 75.'
+    message: 'Weighting must be a number between 20 and 85.'
   - name: total_should_be_100
     message: 'Total must add up to 100%.'
