Remove more unused keys and bump version

--- a/frameworks/digital-outcomes-and-specialists/manifests/display_brief.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/display_brief.yml
@@ -36,8 +36,8 @@
     - locationOutcomes
     - locationSpecialists
     - locationParticipants
-    - importantDates
-    - successCriteria
+    - successCriteriaOutcomes
+    - successCriteriaParticipants
 -
   name: Skills and experience
   questions:
