Multiple versions of `Shortlist criteria` section

--- a/frameworks/digital-outcomes-and-specialists/manifests/display_brief.yml
+++ b/frameworks/digital-outcomes-and-specialists/manifests/display_brief.yml
@@ -41,8 +41,12 @@
 -
   name: Skills and experience
   questions:
-    - essentialRequirements
-    - niceToHaveRequirements
+    - essentialRequirementsOutcomes
+    - essentialRequirementsSpecialists
+    - essentialRequirementsParticipants
+    - niceToHaveRequirementsOutcomes
+    - niceToHaveRequirementsSpecialists
+    - niceToHaveRequirementsParticipants
 -
   name: Type of specialist required
   questions:
