--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/essentialRequirementsOutcomes.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/essentialRequirementsOutcomes.yml
@@ -1,4 +1,5 @@
 name: Essential skills and experience
+id: essentialRequirements
 question: Essential skills and experience
 question_advice: |
   Suppliers who don’t have all the essential skills you list here will be automatically notified that their 
@@ -7,8 +8,9 @@ question_advice: |
   List all the specific skills or experience the supplier must have, 
   eg have experience designing services for users with low digital literacy.
   
-  If you want to add ‘points’ to the individual skills and experience requirements, you must include them here, 
-  eg experience designing services for users with low digital literacy - 15 points
+  You must tell suppliers if you want to score individual criteria.
+  
+  [Read more about how to set evaluation criteria.](https://www.gov.uk/guidance/how-to-set-your-evaluation-criteria-when-buying-digital-outcomes-and-specialists-services#giving-points-to-individual-criteria)
 list_item_name: 'essential requirement'
 number_of_items: 20
 type: list
@@ -16,8 +18,7 @@ depends:
   - "on": "lot"
     being:
       - digital-outcomes
-      - digital-specialists
-      - user-research-participants
+
 validations:
   -
     name: answer_required
@@ -32,4 +33,3 @@ validations:
     name: under_character_limit
     message: 'Each requirement must be no more than 300 characters.'
 empty_message: Add essential skills or experience
-
