--- a/frameworks/digital-outcomes-and-specialists/questions/briefs/niceToHaveRequirementsParticipants.yml
+++ b/frameworks/digital-outcomes-and-specialists/questions/briefs/niceToHaveRequirementsParticipants.yml
@@ -1,18 +1,21 @@
 name: Nice-to-have skills and experience
+id: niceToHaveRequirements
 question: Nice-to-have skills and experience
 question_advice: |
   To find the best supplier to meet your needs, you should:
-  * list as many types of skills and experience as you can
-  * be specific about the skills and experience you're looking for
+  
+  - list as many types of skills and experience as you can
+  - be specific about the skills and experience you're looking for
   
   If too many suppliers have all the essential skills and experience, you’ll use the nice-to-have skills and 
   experience to exclude suppliers.
   
-  List the skills and experience you’d like the supplier to have, 
-  eg provide evidence of delivering at scale
+  You must tell suppliers if you want to score individual criteria.
   
-  If you want to add ‘points’ to the individual skills and experience requirements, you must include them here, 
-  eg previous experience working on government digital projects - 15 points
+  [Read more about how to set evaluation criteria](https://www.gov.uk/guidance/how-to-set-your-evaluation-criteria-when-buying-digital-outcomes-and-specialists-services#giving-points-to-individual-criteria)
+  
+  List the skills and experience you’d like the supplier to have, 
+  eg have experience recruiting users for government research
 hint: "Optional"
 list_item_name: 'nice-to-have requirement'
 number_of_items: 20
@@ -21,9 +24,8 @@ type: list
 depends:
   - "on": "lot"
     being:
-      - digital-outcomes
-      - digital-specialists
       - user-research-participants
+
 validations:
   -
     name: answer_required
